turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:7: error: ':' expected but ')' found.
def quart(c) {
           ^DiskFour:20: error: identifier expected but '}' found.
}
^